remove delopyment files

--- a/.env-common
+++ b/.env-common
@@ -1,2 +1,3 @@
-SECRET = "tkwn-*u8*j9_^rc)np#2^!ywcod_&2d9%h_n&u7+h0fsksz$#n"
-DEBUG = "True"
+SECRET_KEY="tkwn-*u8*j9_^rc)np#2^!ywcod_&2d9%h_n&u7+h0fsksz$#n"
+
+DEBUG=true
